--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+.forLogin {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
 .App {
-  max-width: 700px;
+  flex: 1;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -68,4 +74,57 @@
 
 .added {
   opacity: 50%;
+}
+
+.forRegister {
+}
+
+.forma {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  width: 23%;
+  height: 250px;
+  box-shadow: 0px 0px 5px rgba(73, 73, 73, 0.39);
+  border-radius: 5px;
+}
+
+.forma :last-child {
+  width: 70%;
+  margin-bottom: 40px;
+  background: none;
+  border: 1px solid pink;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.App1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 150px;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.inputs :last-child,
+.inputs input {
+  width: 80%;
+  height: 40px;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.187);
+  border-radius: 5px;
+  padding: 0px;
+  padding-left: 15px;
+  cursor: text;
 }
